--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
+    "cloudinary": "^1.41.0",
+    "cloudinary-core": "^2.13.0",
+    "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "^3.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
