--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "boostrap": "^2.0.0",
+    "@uploadcare/react-widget": "^2.4.5",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
-    "cloudinary-core": "^2.13.0",
     "firebase": "^10.5.2",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^3.0.1",
+    "uploadcare-widget": "^3.21.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
